<resources>
    <string name="app_name">通讯录</string>
    <string name="name">姓名:</string>
    <string name="tel">电话:</string>
    <string name="number">学号:</string>
    <string name="save">保存</string>
    <string name="query">查询</string>
    <string name="search">搜索</string>
    <string name="back">返回</string>
    <string name="studentNumber">12位学号</string>
    <string name="tel_en">Tel</string>
    <string name="name_en">Name</string>
</resources>
