<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/Edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_centerHorizontal="true"
        android:inputType="text|textPersonName"
        android:hint="@string/name_en"/>

    <TextView
        android:id="@+id/Text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Edit_name"
        android:layout_alignBottom="@+id/Edit_name"
        android:layout_toLeftOf="@+id/Edit_name"
        android:layout_toStartOf="@+id/Edit_name"
        android:text="@string/name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Edit_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Edit_name"
        android:layout_centerHorizontal="true"
        android:ems="12"
        android:inputType="phone"
        android:hint="@string/tel_en"/>

    <TextView
        android:id="@+id/Text_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Edit_tel"
        android:layout_alignBottom="@+id/Edit_tel"
        android:layout_toLeftOf="@+id/Edit_tel"
        android:layout_toStartOf="@+id/Edit_tel"
        android:text="@string/tel"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Edit_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Edit_tel"
        android:layout_toEndOf="@+id/Text_tel"
        android:layout_toRightOf="@+id/Text_tel"
        android:ems="12"
        android:hint="@string/studentNumber"
        android:inputType="number" />

    <TextView
        android:id="@+id/Text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Edit_number"
        android:layout_alignBottom="@+id/Edit_number"
        android:layout_alignEnd="@+id/Text_tel"
        android:layout_alignRight="@+id/Text_tel"
        android:text="@string/number"
        android:textSize="20sp" />
    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Edit_tel"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/Edit_tel"
        android:text="@string/save" />

    <Button
        android:id="@+id/query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Edit_tel"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/Edit_tel"
        android:text="@string/query" />



</RelativeLayout>