<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="输入姓名搜索信息"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/Edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="12"
        android:hint="@string/name_en"
        android:inputType="text|textPersonName" />

    <TextView
        android:id="@+id/Text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Edit_name"
        android:layout_alignBottom="@+id/Edit_name"
        android:layout_toLeftOf="@+id/Edit_name"
        android:layout_toStartOf="@+id/Edit_name"
        android:text="@string/name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Edit_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Edit_name"
        android:layout_alignLeft="@+id/Edit_name"
        android:layout_alignRight="@+id/Edit_name"
        android:layout_alignStart="@+id/Edit_name"
        android:layout_below="@+id/Edit_name"
        android:ems="12"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Text_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Edit_tel"
        android:layout_alignBottom="@+id/Edit_tel"
        android:layout_toLeftOf="@+id/Edit_tel"
        android:layout_toStartOf="@+id/Edit_tel"
        android:text="@string/tel"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Edit_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Text_number"
        android:layout_alignBottom="@+id/Text_number"
        android:layout_alignEnd="@+id/Edit_tel"
        android:layout_alignLeft="@+id/Edit_tel"
        android:layout_alignRight="@+id/Edit_tel"
        android:layout_alignStart="@+id/Edit_tel"
        android:ems="12"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Text_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Text_tel"
        android:layout_alignStart="@+id/Text_tel"
        android:layout_below="@+id/Edit_tel"
        android:text="@string/number"
        android:textSize="20sp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:text="@string/search" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView"
        android:text="@string/back" />


</RelativeLayout>